kubernetes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: truelove
spec:
  # A deployment's specification really only has a few useful options
  # 1. How many copies of each pod do we want?
  replicas: 3
  # 2. How do want to update the pods?
  strategy:
    type: Recreate
  # 3. Which pods are managed by this deployment?
  selector:
    # This must match the labels we set on the pod!
    matchLabels:
      app: truelove
  # This template field is a regular pod configuration
  # nested inside the deployment spec
  template:
    metadata:
      # Set labels on the pod. This is used in the deployment selector.
      labels:
        app: truelove
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
      containers:
        - name: truelove
          image: ngoc123/truelove:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 500Mi
              # 0.5 is guaranteed half as much CPU as one that asks for 1 CPU
              # The expression 0.1 is equivalent to the expression 100m
              cpu: 300m
            requests:
              cpu: 200m
              memory: 300Mi
          readinessProbe:
            httpGet:
              path: /truelove/actuator/health
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /truelove/actuator/health
              port: 8080
            initialDelaySeconds: 130           
         
---
apiVersion: v1
kind: Service
metadata:
  name: truelove
spec:
  type: NodePort
  selector:
    app: truelove
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
